--- a/index.html/style.css
+++ b/index.html/style.css
@@ -1,37 +1,121 @@
-body {
-    font-family: Arial, sans-serif;
-    background-color: white;
-    color: black;
-    text-align: center;
-    margin: 0;
-    padding: 0;
+@charset "UTF-8";
+
+/* 
+paleta de cores:
+verde: #49a09d
+roxo: #50f2c82
+*/
+
+* {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;  
+  padding: 0px;
+  margin: 0px;
+  box-sizing: border-box;
 }
 
-.hidden {
+body, html {
+    background-color: #f0f0f0 ;
+    height: 100vh;
+    width: 100vw;
+}
+
+main{
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+}
+
+
+section#login {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    overflow: hidden;
+
+
+    background-color: white;
+    width: 250px;
+    height: 515px;
+    border-radius: 20px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.416);
+
+    transition: width .4s, height .4s;
+}
+
+section#login > div#imagem {
+    background: #5f2c82 url(../imagens/pexels-grizzlybear-399636.jpg) no-repeat;
+    background-size: cover;
+    height: 200px;
+}
+
+section#login > div#formulario {
+    display: block;
+    padding: 10px;
+}
+
+div#formulario > p {
+    font-size: 0.8em;
+} 
+
+form > div.campo {
+    background-color: #b01515;
+    border: 2px solid #d40a0a;
+    display: block;
+    width: 100%;
+    height: 40px;
+    border-radius: 8px;
+    margin: 5px 0px;
+}
+
+
+div.campo > label {
     display: none;
 }
 
-.login-container, .app-container {
-    max-width: 400px;
-    margin: auto;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+div.campo > span {
+    color: rgb(0, 0, 0);
+    /*background-color: black;*/
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
+    
 }
 
-button {
-    background-color: red;
-    color: white;
-    padding: 10px;
+
+div.campo > input {
+    background-color: #d3d3d5;
+    font-size: 1em;
+    width: calc(100% - 48px);
+    height: 100%;
+    border: 0px;
+    border-radius: 8px;
+    padding: 4px;
+    transform: translateY(-12px);
+}
+
+div.campo > input:focus-within {
+    background-color: white;
+}
+
+form > input[type=submit] {
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color: #321fd5;
+    color: rgb(209, 22, 22);
     border: none;
+    border-radius: 5px;
     cursor: pointer;
-    margin-top: 10px;
+} 
+
+form > input[type=submit]:hover {
+    background-color: #1c0d7a;
 }
 
-button:hover {
-    background-color: darkred;
-}
+
+
 
 .modo-noturno {
     background-color: black;
